--- a/index.html
+++ b/index.html
@@ -8,139 +8,102 @@
   <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400" rel="stylesheet">
   <style>
-  .hero {
-    margin-top: 10.3rem;
-    margin-bottom: -10rem;
-    font-size: 3.15rem;
-    font-weight: 600;
-    padding: 0 2.8rem;
-  }
-  .behind {
-        z-index: -1;
-  }
-  .micro {
-    margin-left: -3rem;
-  }
-  .micro-container {
-    padding-bottom:79%;
-    height:0;
-    position:relative;
-    overflow: hidden;
-    z-index: -1;
-  }
-  @media screen and (min-width: 55.1em) {
-    .hit {
-    font-size: 1.75rem;
-    }
-  }
-  @media screen and (min-width: 42em) and (max-width: 55.1em) {
-    .hero {
-      margin-top: 8.6rem;
-      margin-bottom: -10rem;
-      padding: 0 0rem;
-    }
-  }
-  @media screen and (min-width: 42em) and (max-width: 55.1em) {
-    .hero {
-      margin-top: 8.6rem;
-      margin-bottom: -10rem;
-      padding: 0 0rem;
-    }
-    .micro {
-      margin-left: -0.5rem !important;
-    }
-  }
-  @media screen and (min-width: 36em) and (max-width: 42em) {
-    .side-text {
-      margin-top: 4rem;
-    }
-    .micro {
-      margin-left: 0.5rem !important;
-    }
-    .hero {
-      margin-top: 7rem;
-      margin-bottom: -6rem;
-      padding: 0 0rem;
-    }
-  }
-  @media screen and (max-width: 36em) {
-    .hero {
-      margin-top: 6rem;
-      margin-bottom: -6rem;
-      padding: 0 0rem;
-    }
-    .contact-line {
-      line-height: 1.65rem;
-    }
-  }
   </style>
 </head>
-<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
-  <header class="ml2-l">
-    <div class="tc tl-l fl-l w-100-m">
-    <a href="index.html" class="no-underline">
-      <span class="dib o-90 new-logo">
-        <img src="images/logo.svg" class="w-100 shrink">
-      </span>
-    </a>
-    </div>
-    <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
-      <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0 ibm">About</p></a>
-        <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
-      </div>
-    </div>
-  </header>
-    <div class="pt1 top">
-      <p class="f2 center font-light ibm dn-ns mb0 pb2 mt5 pt4">Scientific Illustration and Animation</p>
-        <div class="w-100 mw8 hero o-90 dn db-ns"><img src="images/title.svg" class=""></div>
-        <div class="cn w-100 pb4 pb0-ns">
-          <article class="pa3-l pl5-l w-50-ns w-100 fr-ns dib-ns v-mid side-text">
-            <p class="ibm measure f4 f3-ns lh-copy hit">
+<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt0-l pt2-m mw8">
+  <div>
+        <div class="w-100 pb0-ns cn topper">
+          <div class="w-50-l w-40-m mw8-ns w-100 dn db-ns pl5-l pl4 microscope">
+            <img src="images/microscope-composite@1x.png">
+          </div>
+          <article class="v-mid w-50-l w-60-m w-100 header">
+            <div class="tc tl-ns fl-l mb5 mb4-l title">
+              <a href="index.html" class="no-underline">
+                <span class="dib o-90 w5 logo">
+                  <img src="images/logo.svg" class="w-80">
+                </span>
+              </a>
+              <h1 class="f1-l f5-m f6 ibm mt1-ns pr6-l center w-100 title-text mt0">Scientific Illustration <span class="font-light">&amp; </span> Animation</h1>
+              <div class="mt3-ns mt3 nav-mobile dt center">
+                <a class="ibm f3-l f4-m f5 bb no-underline black-80 fl font-heavy pr1 pl1 hover-bg-light-blue bg-animate dtc" href="#about">About</a>
+                <a class="ibm f3-l f4-m f5 bb no-underline black-80 fl font-heavy ml5-ns ml4 pl1 pr1 hover-bg-light-blue bg-animate dtc" href="#contact">Contact</a>
+                <a class="w2 insta pb1 fl ml5-ns ml4 pl1 pr1 dtc" style="padding-left:6px;" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
+              </div>
+            </div>
+             <p class="measure f4 f3-l f3-m lh-copy fw3 ibm w-100 w-90-ns tag center ml0-l mw6-ns w-90-ns mb-m mt4-m pr3 pl3 pa0-ns mb2 mb3-ns hit font-light black">
               Sometimes words fall short.
             </p>
-            <p class="measure f5 f4-ns lh-copy fw3">
+            <p class="f5 f3-l f4-m lh-copy fw3 ibm w-100 font-light w-90-ns tag mw6-m ml0-l detail center mt2-m pr3 pl3 pa0-ns black-80-ns black">
               From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.
             </p>
+            <div class="mt0 dtc pb4 pt2 nav-full">
+                <a class="ibm f4-l f4 bb no-underline black-80 fl font-heavy pr1 pl1 hover-bg-light-blue bg-animate" href="#about">About</a>
+                <a class="ibm f4-l f4 bb no-underline black-80 fl font-heavy ml4 pl1 pr1 hover-bg-light-blue bg-animate" href="#contact">Contact</a>
+                <a class="insta fl ml4 pl1 pr1" style="padding-left:6px;" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
+              </div>
           </article>
-          <div class="micro-container w-50-ns mw8-ns w-100 dn db-ns">
-            <img src="images/microscope-lines-black_animated.svg" class="micro absolute w-100 o-80">
-            <img src="images/microscope-arrows-black_animated.svg" class="micro absolute w-100 o-80">
-            <img src="images/microscope@1x.png"
-                   srcset="images/microscope@1x.png 1x, images/microscope@2x.png 2x"
-                   alt="Microscope."
-                   class="micro w-100 behind">
-          </div>
       </div>
     </div>
-  <div class="w-100 pr5-l pl5-l mw8">
-    <h3 class="f6 ttu tracked mt0 ibm font-heavy">Recent Work</h3>
-  <!-- LightWidget WIDGET -->
-    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-    <iframe src="//lightwidget.com/widgets/bc1ccc672f7c58ed8a04432cc0fee75f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-    <h3 class="mt1 tr"><a href="https://www.instagram.com/inform.science.studio/" class="blue-text no-underline f6 ibm font-heavy ttu tracked">See more →</a></h3>
-  </div>
   <section class="w-100 pb4">
     <div class="mw8 w-100 center">
-      <div class="w-100 mw8 pr5-l pl5-l center pt4">
-        <h3 class="f6 ibm font-heavy ttu tracked mt0">Demo Reel</h3>
-        <div style="padding:56.25% 0 0 0;position:relative;" class=""><iframe src="https://player.vimeo.com/video/330248913?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <div class="w-100 mw8 pr5-l pl5-l pl3-m pr3-m center">
+        <h3 class="f5-ns f6 mb3-ns mb1 ibm ttu tracked font-heavy">Demo Reel</h3>
+        <div style="padding:56.25% 0 0 0;position:relative;" class="shadow-3"><iframe src="https://player.vimeo.com/video/330248913?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" class="ba b--black-40" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
     </div>
   </section>
-  <section class="pt1 mt0-ns mt3 w-100 grid-l center pb1">
-      <p class="tc-ns mt5-ns mt2 mb0 f1-l f2-m f3 ibm font-light contact">Want to work together?</p>
-      <p class="f3-l f4 tc-ns pb4 contact-line fw3"><a class="no-underline dark-gray bb" href="contact.html">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
-    </section>
-  <footer class="pr5-l pl5-ns pb4-ns pb3">
-      <div class="dtc mw5 fr tr mt3-ns">
-          <div class="f7">
-            <p class="ma0 ibm">Inform Studio © 2018-19</p>
+  <section>
+    <article class="ph5-l mt4-l mt2 tl-ns center w-100" id="about">
+        <div class="mw5 pl4-ns pl5 pr4-ns pr5 center pt3-ns headshot">
+            <img src="images/headshots/sean-square.jpg" class="card-shadow ba b--black-40 br-100">
+          </div>
+          <p class="measure w-100 tc black-90 ibm f2-m f3 f2-l font-light center mt3 mb2 pt2-ns mb3-m pb3-m name">
+          Hi! I'm Sean Kelley.
+        </p>
+            <p class="ibm f5 f5-ns tc-l about-text black-90-ns black font-light center mw6 pr4-l pl4-l pr3-m pl3-m tl tl-ns mb0 mb3-l pb1-ns pl3 pr3 pl0-l pr0-l mt2-m">
+          I help scientists and science communicators share their work effectively.
+        </p>
+    </article>
+    <article class="pl5-l pl0-m pr4-l pr0-m mw6 center mt2 tc tl-ns dt w-50-l w-100 fl-l">
+      <div class="">
+        <p class="ibm f5 f5-ns about-small about-text center lh-copy tl mw6 center-m pl3-m pr3-m mt2-m pl3 pr3 pl0-l pr0-l">
+          I originally studied to be a physicist, but while in school I fell in love with 3D modeling and animation. 
+        </p>
+        <p class="ibm f5 f5-ns about-small about-text center tl lh-copy pb2 mw6 center-m pl3-m pr3-m pl3 pr3 pl0-l pr0-l" style="">
+          Now, science illustration combines both worlds!
+          I believe that beautiful and accurate depictions of scientific research are one of the best ways to inform and inspire others.
+        </p>
+      </div>
+    </article>
+      <article class="dt mt1 mw6 w-50-l w-100 fl-l center pr5-l pl4-l pl0-m pr0-ns">
+        <div class="br3 pb4" id="contact">
+        <p class="mb0 contact mt3 pt1-l ibm tl-l mt3-m tc font-light black-90">Want to work together?</p>
+        <p class="ibm f5 f5-ns tl about-small about-text center lh-copy pb2 mw6-m measure center-m pl3-m pr3-m pl3 pr3 pl0-l pr0-l" style="">
+          I would love to hear from you! The best way to contact me is through email:
+        </p>
+          <div class="tc tl-l">
+          <a class="button" href="mailto:sean@inform.studio">
+            <span class="f3 ibm">Get in touch →</span>
+            </a>
           </div>
         </div>
+      </article>
+    </section>
+    <div class="w-100 pr5-l pl5-l pl3-m pr3-m mw8 dt pt4-l pt3-m pt2">
+      <h3 class="f5-ns f6 ttu tracked mb3-ns mb1 ibm font-heavy">Recent Work</h3>
+      <!-- LightWidget WIDGET -->
+      <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+      <iframe src="//lightwidget.com/widgets/bc1ccc672f7c58ed8a04432cc0fee75f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+      <h3 class="mt1-ns mt0 tr"><a href="https://www.instagram.com/inform.science.studio/" class="black-80 bb pr1 pl1 no-underline f6-ns f7 ibm font-heavy ttu tracked hover-bg-light-blue bg-animate">See more →</a></h3>
+  </div>
+  <footer class="center w-100 dt center pt4 tc">
+      <div class="ibm">
+        <div class="f7">
+          <p class="ma0 ibm ttu">Inform Studio © 2018-19</p>
+          <p class="mt2">CSS <a href="http://tachyons.io">Tachyons</a> | Font <a href="https://github.com/IBM/plex">IBM Plex</a> | <a href="https://www.blendswap.com/blends/view/81389">Microscope</a> | Hosted on <a href="https://pages.github.com/">Github</a> </p>
+        </div>
+      </div>
   </footer>
 </body>
