--- a/about.html
+++ b/about.html
@@ -8,57 +8,116 @@
   <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <style>
+    .about-text {
+      font-size: 1.4rem;
+      line-height: 1.4;
+    }
+    .about-small {
+      font-size: 1.25rem;
+      line-height: 1.35;
+    }
+    .slab {
+      font-family: 'Source Serif Pro', serif;
+    }
+    .name {
+      font-size: 2rem;
+    }
+    .contact {
+      font-size: 1.6rem;
+    }
+    @media screen and (max-width: 36em) {
+      .contact {
+        font-size: 1.4rem;
+      }
+      .name {
+        font-size: 1.6rem;
+      }
+      .about-text {
+      font-size: 1.2rem;
+      line-height: 1.4;
+    }
+    .about-small {
+      font-size: 1.1rem;
+      line-height: 1.35;
+    }
+      .submit {
+        font-size: 1.1rem;
+      }
+  }
+  </style>
 </head>
-<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
+<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l pt2-m mw8">
   <header class="ml2-l">
-    <div class="tc tl-l fl-l w-100-m">
-    <a href="index.html" class="no-underline">
-      <span class="dib o-90 new-logo">
-        <img src="images/logo.svg" class="w-100 shrink">
-      </span>
-    </a>
-    </div>
-    <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
-      <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0 ibm">About</p></a>
-        <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
+    <div>
+        <div class="w-100 pb0-ns cn">
+          <article class="v-mid w-100-l w-60-m w-100 header">
+            <div class="tc title">
+              <div class="tc w-100-m">
+                <a href="index.html" class="no-underline">
+                  <span class="dib o-90 w5 logo mb3">
+                    <img src="images/logo.svg" class="w-80">
+                  </span>
+                </a>
+              </div>
+              <div class="mt0 dt center">
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy pr1 pl1 hover-bg-light-blue bg-animate dtc" href="about.html">About</a>
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy ml5-ns ml4 pl1 pr1 hover-bg-light-blue bg-animate dtc" href="contact.html">Contact</a>
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy ml5-ns ml4 pl1 pr1 hover-bg-light-blue bg-animate dtc" href="blog.html">Blog</a>
+                <a class="w2 insta pb1 ibm black-80 fl font-heavy ml5-ns ml4 pl1 pr1 dtc" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
+              </div>
+            </div>
+          </article>
       </div>
     </div>
   </header>
-  <article class="ph5-l pt5 mt4-l mt3 tc tl-ns">
-      <img src="images/headshots/sean-square.jpg" class="w-100 mw4 mw5-ns pb0-l pb2 pl0 pr0 pr4-ns pt2 pt4-ns fl-ns br-100">
-    <p class="measure f4 f3-ns lh-copy mt0 mt4-ns tc tl-ns ibm">
-      Hi! I'm Sean Kelley.
-    </p>
-    <p class=" f5 f4-ns lh-copy tl fw3">
-      I started Inform Studio to help scientists and science communicators share their work more effectively. I believe that beautiful and accurate depictions of scientific research are one of the best ways to inform and inspire others.
-    </p>
-    <p class="f5 f4-ns lh-copy tl fw3">
-      I originally studied to be a physicist, but while in school I fell in love with 3D modeling and animation. Now, science illustration combines both worlds!
-    </p>
+  <article class="ph5-l mt4 tc tl-ns dt center">
+    <div class="w-40 center pt3-ns">
+      <img src="images/headshots/sean-square.jpg" class="card-shadow fl-ns ba b--black-40 br-100">
+    </div>
+    <div class="w-100 fl measure">
+      <p class="ibm measure f4 f3-ns lh-copy mt0 mt3-ns mt2 tc ibm name font-light">
+        Hi! I'm Sean Kelley.
+      </p>
+      <p class="slab f5 pt2-ns f5-ns tl about-text pl3 pr3" style="">
+        I started Inform Studio to help scientists and science communicators share their work more effectively.
+      </p>
+      <p class="slab f5 f5-ns lh-copy tl about-small pl3 pr3" style="font-weight: 300">
+        I originally studied to be a physicist, but while in school I fell in love with 3D modeling and animation. 
+      </p>
+      <p class="slab f5 f5-ns tl about-small pl3 pr3 pb2" style="">
+        Now, science illustration combines both worlds!
+        I believe that beautiful and accurate depictions of scientific research are one of the best ways to inform and inspire others.
+      </p>
+      <div class="card-shadow br3 pl4-ns pl3 pr3 ba b--black-40 mt4-ns tl bg-white">
+      <p class="mb0 mt4-ns  f3-l f2-m f3 roboto contact">Want to work together?</p>
+      <p class="f4-ns f5 mt3-ns mt2 pt1 pt0-ns pb3-ns pb2 contact-line fw3 roboto submit"><a class="no-underline dark-gray bb hover-bg-light-blue bg-animate fw9" href="contact.html">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and I'll make it happen.</p>
+      </div>
+      <article class="mt5-ns mt4 pl3 pr3 tl">
+        <h3 class="f6 ttu tracked mt0 ibm font-heavy">About the site</h3>
+        <p class="slab measure f5 f4-ns fw3 about-small">
+          Credit's owed where credit's due! Some tools that have made my life easier:
+        </p>
+        <li class="roboto f6">CSS – <a href="https://tachyons.io/" class="blue-text">Tachyons</a></li>
+        <li class="roboto f6 mt1">Font – <a href="https://www.ibm.com/plex/" class="blue-text">IBM Plex</a></li>
+        <li class="roboto f6 mt1">Microscope model – <a href="https://www.blendswap.com/blends/view/81389" class="blue-text">Johnson Martin</a></li>
+      </article>
+    </div>
 <!--
     <p class="f5 f4-ns lh-copy tl fw3">
       Aside from my work, I enjoy surfing, learning new musical instruments, and traveling (currently in Buenos Aires, Argentina).
     </p>
 -->
   </article>
-  <article class="ph5-l pt4 pb4 pb0-ns">
-    <h3 class="f6 ttu tracked mt0 ibm font-heavy">About the site</h3>
-    <p class="measure f5 f4-ns lh-copy fw3">
-      Credit's owed where credit's due! Some tools that have made my life easier:
-    </p>
-    <li class="f5">CSS – <a href="https://tachyons.io/" class="blue-text">Tachyons</a></li>
-    <li class="f5 mt1">Font – <a href="https://www.ibm.com/plex/" class="blue-text">IBM Plex</a></li>
-    <li class="f5 mt1">Microscope model – <a href="https://www.blendswap.com/blends/view/81389" class="blue-text">Johnson Martin</a></li>
-  </article>
-  <footer class="pr5-l pl5-ns pb4">
-      <div class="dtc mw5 fr tr mt3">
-          <div class="f7">
-            <p class="ma0 ibm">Inform Studio © 2018-19</p>
-          </div>
+  <footer class="mt5-ns mt4 mw6 center">
+      <div class="pl5-ns tc tl-ns mt3-ns">
+        <div class="f7">
+          <p class="ma0 ibm">Inform Studio © 2018-19</p>
+<!--          <p class="mt2">CSS <a href="http://tachyons.io">Tachyons</a> | Font <a href="https://github.com/IBM/plex">IBM Plex</a> | Hosted on Github </p>-->
         </div>
+      </div>
   </footer>
 </body>
