--- a/contact.html
+++ b/contact.html
@@ -8,64 +8,99 @@
   <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <style>
     @media screen and (max-width: 36em) {
       .iframe-form {
-        margin-bottom: -.8rem;
+        margin-bottom: -1.6rem;
       }
       .iframe-box {
         margin-top: -1.2rem;
       }
     }
+    .slab {
+      font-family: 'Source Serif Pro', serif;
+      font-size: 1.4rem;
+      line-height: 1.4;
+    }
+    @media screen and (max-width: 36em) {
+      .contact {
+        font-size: 1.4rem;
+      }
+      .name {
+        font-size: 1.6rem;
+      }
+      .about-text {
+      font-size: 1.2rem;
+      line-height: 1.4;
+    }
+    .slab {
+      font-size: 1.1rem;
+      line-height: 1.35;
+    }
+      .submit {
+        font-size: 1.1rem;
+      }
+      .card-text {
+        font-size: 1.1rem;
+      }
+  }
   </style>
 </head>
-<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pt4-l mw8">
-  <header class="ml2-l pl2 pr2 pt2 pa0-ns">
-    <div class="tc tl-l fl-l w-100-m">
-    <a href="index.html" class="no-underline">
-      <span class="dib o-90 new-logo">
-        <img src="images/logo.svg" class="w-100 shrink">
-      </span>
-    </a>
-    </div>
-    <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
-      <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0 ibm">About</p></a>
-        <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
+<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l pt2-m mw8">
+  <header class="ml2-l">
+    <div>
+        <div class="w-100 pb0-ns cn">
+          <article class="v-mid w-100-l w-60-m w-100 header">
+            <div class="tc title">
+              <div class="tc w-100-m">
+                <a href="index.html" class="no-underline">
+                  <span class="dib o-90 w5 logo mb3">
+                    <img src="images/logo.svg" class="w-80">
+                  </span>
+                </a>
+              </div>
+              <div class="mt0 dt center">
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy pr1 pl1 hover-bg-light-blue bg-animate dtc" href="about.html">About</a>
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy ml5-ns ml4 pl1 pr1 hover-bg-light-blue bg-animate dtc" href="contact.html">Contact</a>
+                <a class="ibm f4-l f4-m f5 bb no-underline black-80 fl font-heavy ml5-ns ml4 pl1 pr1 hover-bg-light-blue bg-animate dtc" href="blog.html">Blog</a>
+                <a class="w2 insta pb1 ibm black-80 fl font-heavy ml5-ns ml4 pl1 pr1 dtc" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
+              </div>
+            </div>
+          </article>
       </div>
     </div>
   </header>
-  <section class="w-100 mt0 mb2 pt4 mt4">
-    <div class="mw8 w-100 center pl4-ns pr4-ns">
-      <p class="tc-ns f2-ns f3 pt4-ns pt2 dark-gray font-light pl2 pr2 pa0-ns ibm">Questions or project inquiries?</p>
+   <article class="ph5-l tc tl-ns dt center">
+    <div class="w-100 center pt3-ns">
+      <p class="tc-ns f2-ns f3 dark-gray font-light pl2 pr2 pa0-ns ibm">Questions or project inquiries?</p>
       <div class="mw7-ns center">
-        <p class="f4-ns f5 mt4-ns mt3 lh-copy mb4 mw6-ns center pl2 pr2 pa0-ns fw3">I would love to hear from you! The best way to contact me is through email:</p>
+        <p class="slab f4-ns f5 mt4-ns mt3 lh-copy mb4-ns mb3 mw6-ns center pl5-ns pl3 pr5-ns pr3 fw3 tl">I would love to hear from you! The best way to contact me is through email:</p>
         <div class="pl1 pr1 pl5-l pr5-l">
-        <div class="mw7-l mw6 w-100 pa4-ns pa3 center-ns card-shadow dt ba b--moon-gray br3 bg-white">
-          <div class="w-40-ns w-40 dtc v-top tc">
+        <div class="mw7-l mw6 w-100 pa3-ns pa3 center-ns card-shadow dt ba b--moon-gray br3 bg-white">
+          <div class="dtc v-top tc">
             <div class="pr4-ns pl0-m pa0 mt2 fr-ns">
               <img src="images/headshots/sean-square.jpg" class="br-100 w4-ns w3 dib ba b--dark-gray" alt="avatar">
             </div>
           </div>
-          <p class="f4-ns f5 mw6 center lh-copy dtc v-mid ibm">Sean Kelley <br><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a></p>
+          <p class="f4-ns mw6 center lh-copy dtc v-mid ibm tl card-text">Sean Kelley <br><a class="b no-underline dark-gray bb roboto" href="mailto:sean@inform.studio">sean@inform.studio</a></p>
         </div>
         </div>
       </div>
     </div>
-  </section>
+  </article>
   <section class="w-100 overflow-hidden dn hidden iframe-box">
     <div class="w-100 center z-max relative pl4-ns pr4-ns">
-      <p class="mw6-ns f4-ns f5 center mb0 lh-copy mt4 pl2 pr2 pa0-ns iframe-form fw3">You can also tell me about your project using the form below:</p>
+      <p class="slab mw6-ns f4-ns f5 center mb0 lh-copy mt4 pt1 pt0-ns pl5-ns pr5-ns pl3 pr4 tl iframe-form fw3">You can also tell me about your project using the form below:</p>
     </div>
     <div class="center w-100 mb4 mw7">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
-  <footer class="center pr5-l pb3 mw7">
-      <div class="dtc tc-ns mw5 fr tr pr2 pb2 pa0-ns">
+  <footer class="center">
+      <div class="tc">
           <div class="f7">
             <p class="ma0 ibm">Inform Studio © 2018-19</p>
           </div>
