--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <a class="w2 insta pb1 fl ml5-ns ml4 pl1 pr1 dtc" style="padding-left:6px;" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
               </div>
             </div>
-             <p class="measure f4 f3-l f3-m lh-copy fw3 ibm w-100 w-90-ns tag center ml0-l mw6-ns w-90-ns mb-m mt4-m pr3 pl3 pa0-ns mb2 mb3-ns hit font-light black">
+             <p class="measure f4 f3-l f3-m lh-copy fw3 ibm w-100 w-90-ns tag center ml0-l mw6-ns w-90-ns mb-m mt4-m pa0-ns mb2 mb3-ns hit font-light black">
               Sometimes words fall short.
             </p>
-            <p class="f5 f3-l f4-m lh-copy fw3 ibm w-100 font-light w-90-ns tag mw6-m ml0-l detail center mt2-m pr3 pl3 pa0-ns black-80-ns black">
+            <p class="f5 f3-l f4-m lh-copy fw3 ibm w-100 font-light w-90-ns tag mw6-m ml0-l detail center mt2-m pa0-ns black-80-ns black">
               From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.
             </p>
             <div class="mt0 dtc pb4 pt2 nav-full">
@@ -62,16 +62,16 @@
           <p class="measure w-100 tc black-90 ibm f2-m f3 f2-l font-light center mt3 mb2 pt2-ns mb3-m pb3-m name">
           Hi! I'm Sean Kelley.
         </p>
-            <p class="ibm f5 f5-ns tc-l about-text black-90-ns black font-light center mw6 pr4-l pl4-l pr3-m pl3-m tl tl-ns mb0 mb3-l pb1-ns pl3 pr3 pl0-l pr0-l mt2-m">
+            <p class="ibm f5 f5-ns tc-l about-text black-90-ns black font-light center mw6 pr4-l pl4-ltl tl-ns mb0 mb3-l pb1-ns pl0-l pr0-l mt2-m">
           I help scientists and science communicators share their work effectively.
         </p>
     </article>
     <article class="pl5-l pl0-m pr4-l pr0-m mw6 center mt2 tc tl-ns dt w-50-l w-100 fl-l">
       <div class="">
-        <p class="ibm f5 f5-ns about-small about-text center lh-copy tl mw6 center-m pl3-m pr3-m mt2-m pl3 pr3 pl0-l pr0-l">
+        <p class="ibm f5 f5-ns about-small about-text center lh-copy tl mw6 center-m mt2-m pl0-l pr0-l">
           I originally studied to be a physicist, but while in school I fell in love with 3D modeling and animation. 
         </p>
-        <p class="ibm f5 f5-ns about-small about-text center tl lh-copy pb2 mw6 center-m pl3-m pr3-m pl3 pr3 pl0-l pr0-l" style="">
+        <p class="ibm f5 f5-ns about-small about-text center tl lh-copy pb2 mw6 center-m pl0-l pr0-l" style="">
           Now, science illustration combines both worlds!
           I believe that beautiful and accurate depictions of scientific research are one of the best ways to inform and inspire others.
         </p>
@@ -80,7 +80,7 @@
       <article class="dt mt1 mw6 w-50-l w-100 fl-l center pr5-l pl4-l pl0-m pr0-ns">
         <div class="br3 pb4" id="contact">
         <p class="mb0 contact mt3 pt1-l ibm tl-l mt3-m tc font-light black-90">Want to work together?</p>
-        <p class="ibm f5 f5-ns tl about-small about-text center lh-copy pb2 mw6-m measure center-m pl3-m pr3-m pl3 pr3 pl0-l pr0-l" style="">
+        <p class="ibm f5 f5-ns tl about-small about-text center lh-copy pb2 mw6-m measure center-m pl0-l pr0-l" style="">
           I would love to hear from you! The best way to contact me is through email:
         </p>
           <div class="tc tl-l">
