--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="w2 insta pb1 fl ml5-ns ml4 pl1 pr1 dtc" style="padding-left:6px;" href="https://www.instagram.com/inform.science.studio/"><img class="v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
               </div>
             </div>
-             <p class="measure f4 f3-l f3-m lh-copy fw3 ibm w-100 w-90-ns tag center ml0-l mw6-ns w-90-ns mb-m mt4-m pa0-ns mb2 mb3-ns hit font-light black">
+             <p class="measure f4 f3-l f3-m lh-copy fw3 ibm w-100 w-90-ns tag center ml0-l mw6-ns w-90-ns mt4-m pa0-ns mb2 mb3-ns hit font-light black">
               Sometimes words fall short.
             </p>
             <p class="f5 f3-l f4-m lh-copy fw3 ibm w-100 font-light w-90-ns tag mw6-m ml0-l detail center mt2-m pa0-ns black-80-ns black">
