--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p class="measure w-100 tc black-90 ibm f2-m f3 f2-l font-light center mt3 mb2 pt2-ns mb3-m pb3-m name">
           Hi! I'm Sean Kelley.
         </p>
-            <p class="ibm f5 f5-ns tc-l about-text black-90-ns black font-light center mw6 pr4-l pl4-ltl tl-ns mb0 mb3-l pb1-ns pl0-l pr0-l mt2-m">
+            <p class="ibm f5 f5-ns tc-l about-text black-90-ns black font-light center mw6 pr4-l pl4-ltl tl-ns mb0 mb3-l pb1-ns pl0-l pr0-l mt2-m tc tl-m">
           I help scientists and science communicators share their work effectively.
         </p>
     </article>
