--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </p>
           <div class="tc tl-l">
           <a class="button" href="mailto:sean@inform.studio">
-            <span class="f3 ibm">Get in touch →</span>
+            <span class="f3 ibm">Get in touch <span><img src="images/icons/mail-light.svg" class="ml1" style="width: 2.6rem; margin-bottom: -.2rem;"></span></span>
             </a>
           </div>
         </div>
